--- a/ElementsOfProgInterviews/Ch-6-Arrays-N-Strings/Arrays-And-Strings.ipynb
+++ b/ElementsOfProgInterviews/Ch-6-Arrays-N-Strings/Arrays-And-Strings.ipynb
@@ -208,6 +208,15 @@
     "#### 6.3 MAX DIFFERENCE\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NP-COMPLETE**\n",
+    "\n",
+    "**Class P Problems:** When a set problems can be solved in Polynomial time. e.g. Search an element is $O(n)$ or say some other algo is $O(n^2)$"
+   ]
   }
  ],
  "metadata": {
